# deltabot

./: .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
artwork/: simplebot-avatar.xcf  simplebot-banner.xcf
doc/: api.rst  changelog.rst  conf.py  index.rst
doc/_templates/: globaltoc.html
examples/: grouplog.py  mycalc.py
examples/deltabot_echo/: CHANGELOG.rst  README.rst  deltabot_echo.py  setup.cfg  setup.py  tox.ini
plugins/echo/: echo.py
plugins/simplebot_admin/: MANIFEST.in  setup.py
plugins/simplebot_avatar/: MANIFEST.in  setup.py
plugins/simplebot_cartv/: CHANGELOG.rst  MANIFEST.in  setup.py
plugins/simplebot_cubaweather/: MANIFEST.in  README.md  setup.py
plugins/simplebot_ddg/: MANIFEST.in  README.rst  setup.py  simplebot_ddg.py
plugins/simplebot_echo/: CHANGELOG.rst  MANIFEST.in  setup.py  simplebot_echo.py
plugins/simplebot_facebook/: CHANGELOG.rst  MANIFEST.in  setup.py
plugins/simplebot_friends/: CHANGELOG.rst  MANIFEST.in  README.rst  setup.py  simplebot_friends.py
plugins/simplebot_getdelta/: MANIFEST.in  README.rst  setup.py  simplebot_getdelta.py
plugins/simplebot_groupmaster/: CHANGELOG.rst  MANIFEST.in  README.rst  setup.py  simplebot_groupmaster.py
plugins/simplebot_help/: MANIFEST.in  README.rst  setup.py  simplebot_help.py
scripts/: iter_mail.py
simplebot/: __init__.py  cmdline.py  deltabot.py
tests/: __init__.py  conftest.py  test_cmdline.py  test_commands.py  test_deltabot.py  test_filters.py  test_parser.py  test_plugins.py
(+148 files in other folders)
