[metadata]
name = deltabot_echo
version = attr: deltabot_echo.version
description = Example deltabot echo plugin for http://delta.chat/
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = deltabot, plugin, echo
license = MPL
classifiers =
            Development Status :: 3 - Alpha
            Environment :: Plugins
            Programming Language :: Python :: 3
            License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
            Operating System :: OS Independent
            Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  deltabot

[options.entry_points]
deltabot.plugins =
  deltabot_echo = deltabot_echo  

[options.package_data]
* = *.txt, *.rst
